Initial branch commit

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
      "development": {
        "username": "root",
-       "password": "Samsungs1212",
+       "password": "WkmGry}@[h639hFNTy6Mo4?(",
        "database": "dipmat",
        "host": "localhost",
        "dialect": "mysql"
